@@ -15,19 +15,24 @@ namespace Kitsune
 {
 namespace Network
 {
+class UnixServer;
 
 class UnixSocket : public AbstractSocket
 {
+    friend class UnixServer;
+
 public:
     UnixSocket(const std::string socketFile);
-    UnixSocket(const int socketFd);
 
-    bool initSocket();
+    bool initClientSide();
 
 protected:
     std::string m_socketFile = "";
     sockaddr_un m_socketAddr;
 
+    UnixSocket(const int socketFd);
+
+    bool initSocket();
     long recvData(int socket,
                   void* bufferPosition,
                   const size_t bufferSize,
