@@ -9,7 +9,9 @@
 #include <unix/unix_socket.h>
 #include <unix/unix_server.h>
 #include <network_trigger.h>
-#include <iostream>
+#include <logger/logger.h>
+
+using namespace Kitsune::Persistence;
 
 namespace Kitsune
 {
@@ -42,25 +44,35 @@ UnixServer::~UnixServer()
 bool
 UnixServer::initServer(const std::string socketFile)
 {
+    m_socketFile = socketFile;
+
     // create socket
     m_serverSocket = socket(AF_LOCAL, SOCK_STREAM, 0);
-    if(m_serverSocket < 0) {
+    if(m_serverSocket < 0)
+    {
+        LOG_error("Failed to create a unix-socket");
         return false;
     }
 
-    unlink(socketFile.c_str());
+    unlink(m_socketFile.c_str());
     m_server.sun_family = AF_LOCAL;
-    strncpy(m_server.sun_path, socketFile.c_str(), socketFile.size());
+    strncpy(m_server.sun_path, m_socketFile.c_str(), m_socketFile.size());
 
     // bind to port
-    if(bind(m_serverSocket, reinterpret_cast<struct sockaddr*>(&m_server), sizeof(m_server)) < 0) {
+    if(bind(m_serverSocket, reinterpret_cast<struct sockaddr*>(&m_server), sizeof(m_server)) < 0)
+    {
+        LOG_error("Failed to bind unix-socket to addresse: " + m_socketFile);
         return false;
     }
 
     // start listening for incoming connections
-    if(listen(m_serverSocket, 5) == -1) {
+    if(listen(m_serverSocket, 5) == -1)
+    {
+        LOG_error("Failed listen on unix-socket on addresse: " + m_socketFile);
         return false;
     }
+
+    LOG_info("Successfully initialized unix-socket server on targe: " + m_socketFile);
 
     return true;
 }
@@ -77,9 +89,14 @@ UnixServer::waitForIncomingConnection()
 
     //make new connection
     int fd = accept(m_serverSocket, reinterpret_cast<struct sockaddr*>(&m_server), &length);
-    if(fd < 0) {
+    if(fd < 0)
+    {
+        LOG_error("Failed accept incoming connection on unix-server with address: " + m_socketFile);
         return nullptr;
     }
+
+    LOG_info("Successfully accepted incoming connection on unix-socket server with "
+             "address : " + m_socketFile);
 
     // create new socket-object from file-descriptor
     UnixSocket* unixSocket = new UnixSocket(fd);
