@@ -50,7 +50,7 @@ TcpSocket_TcpServer_Test::checkConnectionInit()
 
     // init client
     m_socketClientSide = new TcpSocket("127.0.0.1", 12345);
-    UNITTEST(m_socketClientSide->initSocket(), true);
+    UNITTEST(m_socketClientSide->initClientSide(), true);
 
     usleep(10000);
 
