@@ -10,8 +10,14 @@
 #include <libKitsuneNetwork/unix/unix_socket_unix_server_test.h>
 #include <libKitsuneNetwork/tls_tcp/tls_tcp_socket_tls_tcp_server_test.h>
 
+#include <logger/logger.h>
+
+using Kitsune::Persistence::initLogger;
+
 int main()
 {
+    //initLogger("/tmp", "testlog", true, true);
+
     Kitsune::Network::TcpSocket_TcpServer_Test();
     Kitsune::Network::UnixSocket_UnixServer_Test();
     Kitsune::Network::TlsTcpSocket_TcpServer_Test();
