@@ -1,9 +1,12 @@
 # Changelog
 
 [Unreleased]
+### Added
+- log-output base on the logger of libKitsundePersistence
 
 ### Changed
 - socket on client-side have to be init manually to get return value
+- socket-constructors for server-side are now private 
 
 
 ## [0.3.0] - 2019-09-09
